# neutrapy

./: .gitignore  404.html  Cargo.toml  README.md  build.py  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  docs.yml
CHANGELOG/: index.html
app-to-extension/: index.html
cli/: index.html
docs/: app-to-extension.md  cli.md  extension.md  links.md  requirements.txt
example/: neutralino.config.json  neutrapy.toml  pyoxidizer.bzl  pyproject.toml  requirements.txt
example/extensions/python/: __main__.py  utils.py
example/resources/: index.html
example/resources/js/: main.js
extension/: index.html
links/: index.html
neutrapy/: __main__.py  args.toml  current_platform_rs.pyi  default_configs.py  utils.py
neutrapy/commands/: add.py  build.py  check.py  create.py  remove.py  run.py  sync.py
neutrapy/templates/default/: main.js  neutralino.config.json  pyoxidizer.bzl  pyproject.toml
neutrapy/templates/default/extensions/python/: __main__.py  api.py  utils.py
neutrapy/templates/default/resources/: styles.css
neutrapy/templates/default/resources/js/: main.js
neutrapy/templates/svelte/: .neutrapy_template.toml  index.html  neutralino.config.json  package-lock.json  vite.config.js
neutrapy/templates/svelte/extensions/python/: api.py  utils.py
neutrapy/templates/svelte/src/: App.svelte  neu.js
search/: search_index.json
src/: lib.rs
