[package]
name = "current_platform_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "^0.16", features = ["extension-module"]}
current_platform = "0.2.0"

[lib]
name = "current_platform_rs"
crate-type = ["cdylib"]
