[tool.poetry]
name = "example-python"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
packages = [
    { include = "extensions/example" }
]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.3.3"
rel = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
