[tool.poetry]
name = "example-python"
version = "0.1.0"
description = ""
license = "MIT"
authors = []

[[tool.poetry.packages]]
include = "extensions/example"

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.3.3"
rel = "^0.4.7"
rtoml = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
