[tool.poetry]
name = "${name}-python"
version = "${version}"
description = "${description}"
authors = []
license = "${license}"
packages = [
    { include = "extensions/${name}" }
]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^1.3.3"
rel = "^0.4.7"
rtoml = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
